Source/WebKit/GPUProcess/media/gstreamer/RemoteMediaPlayerProxyGStreamer.cpp
@@ -43,11 +43,6 @@ void RemoteMediaPlayerProxy::mediaPlayerFirstVideoFrameAvailable()
     notImplemented();
 }
 
-void RemoteMediaPlayerProxy::mediaPlayerRenderingModeChanged()
-{
-    notImplemented();
-}
-
 } // namespace WebKit
 
 
