Source/WebKit/GPUProcess/media/win/RemoteMediaPlayerProxyWin.cpp
@@ -43,11 +43,6 @@ void RemoteMediaPlayerProxy::mediaPlayerFirstVideoFrameAvailable()
     notImplemented();
 }
 
-void RemoteMediaPlayerProxy::mediaPlayerRenderingModeChanged()
-{
-    notImplemented();
-}
-
 #if ENABLE(VIDEO_PRESENTATION_MODE)
 void RemoteMediaPlayerProxy::enterFullscreen(CompletionHandler<void()>&& completionHandler)
 {
