Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.h
@@ -107,6 +107,7 @@ public:
     void characteristicChanged(RemoteMediaPlayerState&&);
     void sizeChanged(WebCore::FloatSize);
     void firstVideoFrameAvailable();
+    void renderingModeChanged();
 #if PLATFORM(COCOA)
     void setVideoInlineSizeFenced(const WebCore::IntSize&, const WTF::MachSendRight&);
 #endif
